tests/samples/invalid/early_return_in_void.pn
fn main()
{
	var x = 33;

	if x == 33
	{
		return;
	}

	clean_up();
	finish();
}

fn clean_up()
{
	//...
}

fn finish()
{
	//...
}
